--- a/Vlearn/app/src/main/res/layout/new_forum_post_sheet.xml
+++ b/Vlearn/app/src/main/res/layout/new_forum_post_sheet.xml
@@ -10,119 +10,121 @@
     app:behavior_peekHeight="0dp"
     app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">
 
-    <FrameLayout
+    <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        app:cardCornerRadius="12dp"
+        android:layout_margin="8dp"
+        app:cardBackgroundColor="@android:color/white">
 
-        <androidx.cardview.widget.CardView
+        <ImageButton
+            android:id="@+id/back_btn"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:src="@drawable/ic_baseline_arrow_back_24"
+            android:background="@android:color/transparent"
+            android:scaleType="centerCrop"
+            android:layout_gravity="top|start"/>
+
+        <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            app:cardCornerRadius="12dp"
-            android:layout_margin="8dp"
-            app:cardBackgroundColor="@android:color/white">
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            android:padding="8dp">
 
-            <ImageButton
-                android:id="@+id/back_btn"
-                android:layout_width="50dp"
-                android:layout_height="50dp"
-                android:src="@drawable/ic_baseline_arrow_back_24"
-                android:background="@android:color/transparent"
-                android:scaleType="centerCrop"
-                android:layout_gravity="top|start"/>
-
-            <LinearLayout
+            <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:orientation="vertical"
-                android:padding="8dp">
+                android:layout_marginStart="12dp"
+                android:layout_marginTop="42dp"
+                android:layout_marginEnd="12dp"
+                android:fontFamily="sans-serif-light"
+                android:text=""
+                android:textColor="@android:color/black"
+                android:textSize="16sp" />
 
-                <TextView
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginStart="12dp"
-                    android:layout_marginTop="42dp"
-                    android:layout_marginEnd="12dp"
-                    android:fontFamily="sans-serif-light"
-                    android:text="Your thoughts here..."
-                    android:textColor="@android:color/black"
-                    android:textSize="16sp" />
+            <com.google.android.material.textfield.TextInputLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_margin="8dp"
+                android:hint="Your thoughts here..."
+                android:textColorHint="@android:color/darker_gray"
+                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
 
-                <EditText
+                <com.google.android.material.textfield.TextInputEditText
                     android:id="@+id/new_forum_post_content_et"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_margin="8dp"
-                    android:background="@drawable/rounded_box"
-                    android:padding="12dp"
                     android:minLines="3"
                     android:maxLines="5"
-                    android:gravity="top"/>
+                    android:gravity="top"
+                    android:textColor="@android:color/black"/>
 
-                <TextView
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginStart="12dp"
-                    android:layout_marginTop="12dp"
-                    android:layout_marginEnd="12dp"
-                    android:fontFamily="sans-serif-light"
-                    android:text="Add an image(Optional)"
-                    android:textColor="@android:color/black"
-                    android:textSize="16sp" />
+            </com.google.android.material.textfield.TextInputLayout>
 
-                <FrameLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content">
-
-                    <ImageView
-                        android:id="@+id/new_post_main_image"
-                        android:layout_width="match_parent"
-                        android:layout_height="220dp"
-                        android:layout_margin="8dp"
-                        android:background="@drawable/rounded_box"
-                        android:scaleType="centerCrop"
-                        android:transitionName="main_item_main_image" />
-
-
-                    <TextView
-                        android:id="@+id/new_post_main_image_label_tv"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_gravity="center"
-                        android:layout_marginBottom="24dp"
-                        android:gravity="center"
-                        android:text="Add an image"
-                        android:textColor="@color/colorPrimaryDark"
-                        android:textAlignment="center"
-                        android:textSize="20sp" />
-
-                    <Button
-                        android:id="@+id/new_post_upload_image_btn"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_gravity="bottom|center"
-                        android:layout_marginBottom="24dp"
-                        android:backgroundTint="@color/colorAccent"
-                        android:paddingStart="36dp"
-                        android:paddingEnd="36dp"
-                        android:text="Upload"
-                        android:textColor="@android:color/white" />
-
-                </FrameLayout>
-
-            </LinearLayout>
-
-            <Button
-                android:id="@+id/new_post_share_btn"
+            <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_gravity="bottom"
-                android:background="@color/colorAccent"
-                android:minHeight="52dp"
-                android:text="Share"
-                android:textColor="@android:color/white" />
+                android:layout_marginStart="12dp"
+                android:layout_marginTop="12dp"
+                android:layout_marginEnd="12dp"
+                android:fontFamily="sans-serif-light"
+                android:text="Add an image(Optional)"
+                android:textColor="@android:color/black"
+                android:textSize="16sp" />
 
-        </androidx.cardview.widget.CardView>
+            <FrameLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
 
-    </FrameLayout>
+                <ImageView
+                    android:id="@+id/new_post_main_image"
+                    android:layout_width="match_parent"
+                    android:layout_height="220dp"
+                    android:layout_margin="8dp"
+                    android:background="@drawable/rounded_box"
+                    android:scaleType="centerCrop"
+                    android:transitionName="main_item_main_image" />
+
+
+                <TextView
+                    android:id="@+id/new_post_main_image_label_tv"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:layout_marginBottom="24dp"
+                    android:gravity="center"
+                    android:text="Add an image"
+                    android:textColor="@color/colorPrimaryDark"
+                    android:textAlignment="center"
+                    android:textSize="20sp" />
+
+                <Button
+                    android:id="@+id/new_post_upload_image_btn"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="bottom|center"
+                    android:layout_marginBottom="24dp"
+                    android:backgroundTint="@color/colorAccent"
+                    android:paddingStart="36dp"
+                    android:paddingEnd="36dp"
+                    android:text="Upload"
+                    android:textColor="@android:color/white" />
+
+            </FrameLayout>
+
+        </LinearLayout>
+
+        <Button
+            android:id="@+id/new_post_share_btn"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_gravity="bottom"
+            android:background="@color/colorAccent"
+            android:minHeight="52dp"
+            android:text="Share"
+            android:textColor="@android:color/white" />
+
+    </androidx.cardview.widget.CardView>
 
 </LinearLayout>
