--- a/Vlearn/app/src/main/res/layout/activity_login.xml
+++ b/Vlearn/app/src/main/res/layout/activity_login.xml
@@ -65,6 +65,7 @@
                         android:layout_marginBottom="12dp"
                         android:hint="@string/hint_email"
                         android:inputType="textEmailAddress"
+                        android:textColor="@android:color/black"
                         android:textColorHint="@android:color/darker_gray"/>
 
                     <com.google.android.material.textfield.TextInputEditText
@@ -76,6 +77,7 @@
                         android:layout_marginBottom="12dp"
                         android:hint="@string/hint_password"
                         android:inputType="textPassword"
+                        android:textColor="@android:color/black"
                         android:textColorHint="@android:color/darker_gray" />
 
                     <!-- Login Button -->
