--- a/Vlearn/app/src/main/res/layout/course_menu_item.xml
+++ b/Vlearn/app/src/main/res/layout/course_menu_item.xml
@@ -1,38 +1,51 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_margin="12dp"
+<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:layout_marginStart="6dp"
+    android:layout_marginEnd="6dp"
+    android:layout_marginTop="12dp"
+    android:layout_marginBottom="12dp"
     android:layout_width="180dp"
     android:layout_height="wrap_content"
-    android:background="@drawable/search_box"
-    android:orientation="vertical">
+    app:cardBackgroundColor="@android:color/white"
+    app:cardCornerRadius="12dp">
 
-    <ImageView
-        android:id="@+id/course_image"
-        android:layout_width="180dp"
-        android:layout_height="128dp"
-        android:src="@drawable/ic_pencil_holder"/>
-
-    <TextView
-        android:id="@+id/course_name_tv"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginEnd="8dp"
-        android:layout_marginStart="8dp"
-        android:textSize="18sp"
-        android:textColor="@android:color/black"
-        android:maxLines="2"
-        android:text="Course Name"/>
-
-    <TextView
-        android:id="@+id/progress_tv"
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="8dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginStart="8dp"
-        android:textSize="16sp"
-        android:textColor="@android:color/black"
-        android:text="Progress"/>
+        android:orientation="vertical"
+        android:background="@drawable/search_box">
 
-</LinearLayout>
+        <ImageView
+            android:id="@+id/course_image"
+            android:layout_width="match_parent"
+            android:layout_height="128dp"
+            android:scaleType="centerCrop"
+            android:layout_marginTop="4dp"
+            android:src="@drawable/ic_pencil_holder"/>
+
+        <TextView
+            android:id="@+id/course_name_tv"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginEnd="8dp"
+            android:layout_marginStart="8dp"
+            android:textSize="18sp"
+            android:textColor="@android:color/black"
+            android:maxLines="2"
+            android:text="Course Name"/>
+
+        <TextView
+            android:id="@+id/progress_tv"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="8dp"
+            android:layout_marginEnd="8dp"
+            android:layout_marginStart="8dp"
+            android:textSize="16sp"
+            android:textColor="@android:color/black"
+            android:text="Progress"/>
+
+    </LinearLayout>
+
+</androidx.cardview.widget.CardView>
