--- a/Vlearn/app/src/main/res/layout/latest_course_item.xml
+++ b/Vlearn/app/src/main/res/layout/latest_course_item.xml
@@ -1,7 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_margin="12dp"
+    android:layout_marginStart="12dp"
+    android:layout_marginEnd="12dp"
+    android:layout_marginTop="6dp"
+    android:layout_marginBottom="6dp"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:background="@drawable/search_box"
@@ -9,9 +12,12 @@
 
     <ImageView
         android:id="@+id/course_image"
-        android:layout_width="95dp"
-        android:layout_height="95dp"
+        android:layout_width="120dp"
+        android:layout_height="120dp"
         android:src="@drawable/ic_pencil_holder"
+        android:scaleType="centerCrop"
+        android:layout_marginTop="4dp"
+        android:layout_marginBottom="4dp"
         android:layout_gravity="center"/>
 
     <LinearLayout
